--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,65 @@
 :root {
-  --gold-trim: 5px;
+    --white-trim: 5px;
 }
-
 .App {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
-
 .MuiToolbar-root {
-  background-color: #164863;
-  border-bottom: var(--gold-trim) solid #BF9646;
+    background-color: #164863;
+    border-bottom: var(--white-trim) solid #ffff;
 }
-
 #LandingPageLargeOpening {
   /* border: 4px dashed green; */
     background-color: #a3cbe0;
     flex-grow: 1;
 }
-
 #LandingPageExampleSchedules {
   /* border: 4px dashed yellow; */
     display:flex;
     background-color: #164863;
-    border-top: var(--gold-trim) solid #BF9646;
+    border-top: var(--white-trim) solid #ffff;
     height: 25vh;
     justify-content:space-evenly;
-    align-items: center;
-    
+    align-items: center;  
 } 
-
 /* .ExampleSchedule { */
-    /* NEVER USE PIXELS */
-    
+    /* NEVER USE PIXELS */   
     /* background-color: #a3cbe0; */
 /* } */
-
 .ExampleSchedule.MuiButtonBase-root {
     height: 20vh;
     width: 20vh;
     background-color: #a3cbe0;
     border-radius: 100%;
-    border: var(--gold-trim) solid #BF9646;
+    border: var(--gold-trim) solid #ffff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:18px;
-     
-    /* box-shadow: 2px 5px x rgb(0, 0, 0); */
-    
+    /* box-shadow: 2px 5px x rgb(0, 0, 0); */   
 }
-
 .TryExampleSchedules.MuiButtonBase-root {
     background-color: #a3cbe0;
-    border: var(--gold-trim) solid #BF9646;
-    padding: 2em;
+    border-radius:10% 10% 10% 10%;
+    padding: 1em;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:18px;
     font-weight: bold;
-
-    /*normal is like 300 and bold is like 700 */
-  
+    /*normal is like 300 and bold is like 700 */ 
 }
-
 .ExampleSchedule > img{
-  width:65%;
+    width:65%;
+}
+#WebsiteDescription{
+    position:absolute;
+    top:15vh;
+    right:10vh;
+    border-radius:10% 10% 10% 10%;
+    height: auto;
+    width: 80vh;
+    padding:3vh;
+    background-color: #164863;
+    color:#ffff;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:18px;
 }
