--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,27 @@
     flex-direction: column;
 }
 .MuiToolbar-root {
+    display:flex;
+    width:100vw;
+    align-items: top;
     background-color: #164863;
     border-bottom: var(--white-trim) solid #ffff;
 }
 #LandingPageLargeOpening {
   /* border: 4px dashed green; */
-    background-color: #a3cbe0;
-    flex-grow: 1;
+  /* this is the background color of the main page */
+    background-color: #a3cbe0; 
+    height: 100%;
+    
 }
+
+#LandingPageLargeOpening > img {
+position:absolute;
+width:60%;
+left:10%;
+bottom:25%;
+border-radius: 5%/10%;
+}   
 #LandingPageExampleSchedules {
   /* border: 4px dashed yellow; */
     display:flex;
@@ -36,12 +49,13 @@
     border: var(--gold-trim) solid #ffff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:18px;
+    margin:10px;
     /* box-shadow: 2px 5px x rgb(0, 0, 0); */   
 }
 .TryExampleSchedules.MuiButtonBase-root {
     background-color: #a3cbe0;
-    border-radius:10% 10% 10% 10%;
-    padding: 1em;
+    border-radius:5%/20%;
+    padding:1em;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:18px;
     font-weight: bold;
@@ -52,9 +66,9 @@
 }
 #WebsiteDescription{
     position:absolute;
-    top:15vh;
+    top:20vh;
     right:10vh;
-    border-radius:10% 10% 10% 10%;
+    border-radius:5%/10%;
     height: auto;
     width: 80vh;
     padding:3vh;
@@ -62,4 +76,9 @@
     color:#ffff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:18px;
+}
+#landingPageBackgroundCalender{
+    height:auto;
+    width: auto;
+    justify-content: left;
 }
