fixed the about page

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
-  background-color: #A3CBE0;
+  background-color: #ffff;
+  /* #A3CBE0; */
   /* border-bottom:30px solid #164863; */
   height: 100%;
 }
