--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,7 +1,8 @@
 #AboutPage{
     max-width: 100%;
-    color:#ffff;
+    color:black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: Large;
     overflow-x: hidden;
 }
 #Title{
@@ -9,59 +10,87 @@
     word-wrap: normal;
     max-width: 100%;
     width: 500px; 
+    position:relative;
+    top:10vh;
     word-wrap: break-word;        
     text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #box1{
     height:60vh;
     width:40vh;
-    background-color: rgb(43, 42, 42);
+    background-color: rgb(63, 62, 62);
     border-radius: 10%/10%;
-    position:absolute;
+    position:relative;
     left:40%;
     top:30%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: top;
+    padding:20px;
+    color:white;
     z-index: 2;
+
 }
 #box2{
     height:60vh;
     width:40vh;
-    background-color: rgb(189, 34, 34);
+    background-color: rgb(98, 176, 240);
     transform: rotate(20deg);
     border-radius: 10%/10%;
-    position:absolute;
+    position:relative;
     left:50%;
-    top:35%;
+    top:-25%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: top;
+    padding:20px;
+    color:white;
     z-index: 1;
 }
 #box3{
     height:60vh;
     width:40vh;
-    background-color: rgb(183, 157, 157);
+    background-color: rgb(124, 245, 178);
     transform: rotate(-20deg);
     border-radius: 10%/10%;
-    position:absolute;
-    right:50%;
-    top:35%;
+    position:relative;
+    left:30%;
+    top:-85%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: top;
+    padding:20px;
+    color:white;
     z-index: 0;
 }
 #CardBar{
-    position:absolute;
+    position:relative;
     max-width: 100%;
-    top:100vh;
+    top:-60vh;
     margin:20px;
     display:flex;
 }
 #Text1{
-    position: absolute;
-    top:140vh;
-    left:30vh;
+    left:5vh;
+    top:-50vh;
+    position: relative;
+    word-wrap: break-word;  
+    max-width: 50%;
+}
+a{
+    max-width: 50%;
+}
+#AboutPageBoxText1{
+    display:flex;
+    flex-direction: row;
+    top:-90vh;
+}
+#image1{
+    position:relative;
+    top:-50vh;
+
 }
